--- a/Analyse/HTML/TestResult/TestResultTemplate.css
+++ b/Analyse/HTML/TestResult/TestResultTemplate.css
@@ -150,6 +150,7 @@
 	{
 		/*max-width:90%;
 		max-height:90%;*/
+		width:800px;
 	}
 	#Page #ContentWrap #Content .ResultData .Plot .LargeImageContainer .OpenInNewWindowLinkWrap
 	{
