added zoom in/out cursor icons for images in html
git-svn-id: https://svn.cern.ch/reps/moreweb@67 4525493e-7705-40b1-a816-d608a930855b

--- a/Analyse/HTML/TestResult/TestResultTemplate.css
+++ b/Analyse/HTML/TestResult/TestResultTemplate.css
@@ -67,6 +67,8 @@ Program	: MORE-Web
 		width:198px;	
 		border:1px solid #ffffff;
 		max-width:100%;
+		cursor: -webkit-zoom-in; 
+		cursor: -moz-zoom-in;
 	}
 	#Page #ContentWrap #Content .ResultData .SubTestResults .Group.Width2 .ResultData .Plot
 	{
@@ -145,6 +147,8 @@ Program	: MORE-Web
 	#Page #ContentWrap #Content .ResultData .Plot .LargeImageContainer .ImageLinkBack
 	{
 		display:block;
+		cursor: -webkit-zoom-out; 
+		cursor: -moz-zoom-out;
 	}
 	#Page #ContentWrap #Content .ResultData .Plot .LargeImageContainer[id]:target .ImageLinkBack
 	{
