--- a/Analyse/HTML/TestResult/TestResultTemplate.css
+++ b/Analyse/HTML/TestResult/TestResultTemplate.css
@@ -55,6 +55,8 @@ Program	: MORE-Web
 		float:none;
 		clear:both;
 		width:100%;
+		padding-left:0px;
+		padding-right:0px;
 	}
 	#Page #ContentWrap #Content .SubTestResults .ResultData .Title
 	{
