--- a/Analyse/HTML/TestResult/TestResultTemplate.css
+++ b/Analyse/HTML/TestResult/TestResultTemplate.css
@@ -189,8 +189,9 @@
 		right:0px;
 		bottom:0px;
 		z-index:10;
-		padding:5px;
+		padding:10px;
 		cursor:pointer;
+		background:#fff;
 	}
 	#Page #ContentWrap #Content .ResultData .Plot .LargeImageContainer .OpenInNewWindowLinkWrap
 	{
