--- a/Analyse/HTML/ProductionOverview/OverviewTemplate.css
+++ b/Analyse/HTML/ProductionOverview/OverviewTemplate.css
@@ -17,7 +17,10 @@
 	{
 		display:none;	
 	}
-	
+	#Page #ContentWrap #Content .ProductionOverviewTable table tr.hidden
+	{
+		display:none;	
+	}	
 
 	#Page #ContentWrap #Content .ProductionOverviewTable table tr td.Header
 	{
